[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
margin_left = 1.0
margin_top = 1.0
margin_right = 803.0
margin_bottom = 502.0
script = ExtResource( 1 )

[node name="TimerLabel" type="Label" parent="."]
margin_left = 365.971
margin_top = 38.3251
margin_right = 438.971
margin_bottom = 90.3251
text = "0"
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Second" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Second" to="." method="_on_Second_timeout"]
